[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/Level/StageDefault.tscn" type="PackedScene" id=1]
[ext_resource path="res://Asset/Background/OceanBackground4.png" type="Texture" id=2]
[ext_resource path="res://Script/Level/Stage2.gd" type="Script" id=4]

[node name="Stage2" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="BasicEnemySpawnTimer" parent="." index="1"]
wait_time = 1.0

[node name="Background2" parent="." index="5"]
position = Vector2( -128, -112 )
texture = ExtResource( 2 )
region_rect = Rect2( -80, 0, 750, 500 )

[node name="Background3" parent="." index="6"]
visible = false

[connection signal="timeout" from="BasicEnemySpawnTimer" to="." method="_on_BasicEnemySpawnTimer_timeout"]
[connection signal="timeout" from="SpecialEnemySpawnTimer" to="." method="_on_SpecialEnemySpawnTimer_timeout"]
